--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -6,7 +6,46 @@ header {
   justify-content: center;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+}
+
 footer {
   display: flex;
   justify-content: center;
+}
+
+.search__container {
+  display: flex;
+  justify-content: center;
+}
+
+.slider {
+  display: flex;
+  justify-content: center;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 300px;
+  
+  .card__title {
+  }
+  
+  .card__img {
+    display: flex;
+    justify-content: center;
+    width: 240px;
+    height: 360px;
+    background-color: antiquewhite;
+  }
+  
+  .card__year {
+  }
+  
+  .card__rating {
+  }
 }
