--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,39 +1,116 @@
+html,
+body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
 header {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+header .film {
+  display: inline-block;
+  width: calc(1.375rem + 0.5vw);
+  height: calc(1.375rem + 0.5vw);
+  margin-left: 8px;
+  background-image: url(../assets/img/film.svg);
+  background-repeat: no-repeat;
+  animation: spin 8s linear infinite;
+}
+
+@keyframes spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
 main {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
+  flex: 1 0 auto;
 }
 
 footer {
   display: flex;
   justify-content: center;
+  flex: 0 0 auto;
+  height: 36px;
 }
 
 .search__container {
+  margin: 0 auto;
+  padding: 1rem;
   display: flex;
   justify-content: center;
+  width: 300px;
+}
+
+.search__container .search-button {
+  margin-left: 6px;
 }
 
 .slider {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .card {
+  position: relative;
+  margin: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
+  width: 240px;
 }
 
-.card .card__img {
+.card:nth-child(n+5) {
+  display: none;
+}
+
+.card .card__title {
+  padding: 0 4px;
+  width: 100%;
+  height: 3rem;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+
+.card .card__poster {
   display: flex;
   justify-content: center;
-  width: 240px;
-  height: 360px;
-  background-color: antiquewhite;
+  width: 228px;
+  height: 340px;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  background-position: 50% 0;
+}
+
+.card .card__year {
+  height: 2rem;
+  line-height: 2rem;
+}
+
+.card .card__fav {
+  position: absolute;
+  bottom: 1rem;
+  right: 1rem;
+  width: 1.5rem;
+  height: 1.5rem;
+  background-image: url(../assets/img/star-empty.svg);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  outline: none;
+  border: none;
 }
