--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,51 +1,122 @@
+// @import "custom";
+html,
 body {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 header {
   display: flex;
   justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  
+  .film {
+    display: inline-block;
+    width: calc(1.375rem + 0.5vw);
+    height: calc(1.375rem + 0.5vw);
+    margin-left: 8px;
+    background-image: url(../assets/img/film.svg);
+    background-repeat: no-repeat;
+    
+    animation: spin 8s linear infinite;
+
+    @keyframes spin {
+      from {
+        transform: rotate(0deg);
+      }
+
+      to {
+        transform: rotate(360deg);
+      }
+    }
+  }
 }
 
 main {
   display: flex;
   flex-direction: column;
+  margin-bottom: 10px;
+  flex: 1 0 auto;
+
 }
 
 footer {
   display: flex;
   justify-content: center;
+  flex: 0 0 auto;
+  height: 36px;
 }
 
 .search__container {
+  margin: 0 auto;
+  padding: 1rem;
   display: flex;
   justify-content: center;
+  width: 300px;
+  
+  .search-button {
+    margin-left: 6px;
+  }
 }
 
 .slider {
   display: flex;
   justify-content: center;
+  flex-wrap: wrap;
 }
 
 .card {
+  position: relative;
+  margin: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 300px;
-  
-  .card__title {
+  width: 240px;
+
+  &:nth-child(n+5) {
+    display: none;
   }
-  
-  .card__img {
+
+  .card__title {
+    padding: 0 4px;
+    width: 100%;
+    height: 3rem;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .card__poster {
     display: flex;
     justify-content: center;
-    width: 240px;
-    height: 360px;
-    background-color: antiquewhite;
+    width: 228px;
+    height: 340px;
+    background-size: 100%;
+    background-repeat: no-repeat;
+    background-position: 50% 0;
   }
-  
+
   .card__year {
+    height: 2rem;
+    line-height: 2rem;
   }
+
+  .card__rating {}
   
-  .card__rating {
+  .card__fav {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    width: 1.5rem;
+    height: 1.5rem;
+    background-image: url(../assets/img/star-empty.svg);
+    background-color: transparent;
+    background-repeat: no-repeat;
+    background-position: 50%;
+    outline: none;
+    border: none;
   }
 }
