--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -116,5 +116,9 @@ footer {
     background-position: 50%;
     outline: none;
     border: none;
+    
+    &.isFav {
+      background-image: url(../assets/img/star-gold.svg);
+    }
   }
 }
