--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -69,11 +69,11 @@ footer {
 
 .card {
   position: relative;
-  margin: 8px;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 240px;
+  height: 440px;
 
   &:nth-child(n+5) {
     display: none;
@@ -121,4 +121,17 @@ footer {
       background-image: url(../assets/img/star-gold.svg);
     }
   }
+}
+
+.swiper-container {
+  width: auto;
+  display: flex;
+  justify-content: center;
+  height: 490px;
+  max-width: 1280px;
+}
+
+.swiper-slide {
+  display: flex;
+  justify-content: center;
 }
