--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -74,9 +74,11 @@ footer {
   align-items: center;
   width: 240px;
   height: 440px;
-
-  &:nth-child(n+5) {
-    display: none;
+  margin-top: 1rem;
+  transition: box-shadow 0.2s;
+  
+  &:hover {
+    box-shadow: 0px 0px 1rem 0px rgba(0, 0, 0, 0.5);
   }
 
   .card__title {
@@ -127,7 +129,7 @@ footer {
   width: auto;
   display: flex;
   justify-content: center;
-  height: 490px;
+  height: 510px;
   max-width: 1280px;
 }
 
