--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -11,7 +11,13 @@ header {
   justify-content: center;
   flex-direction: column;
   align-items: center;
-  
+
+  h1 {
+    // background: linear-gradient(to right, #7927b2, #fb3182);
+    // -webkit-background-clip: text;
+    // -webkit-text-fill-color: transparent;
+  }
+
   .film {
     display: inline-block;
     width: calc(1.375rem + 0.5vw);
@@ -19,7 +25,7 @@ header {
     margin-left: 8px;
     background-image: url(../assets/img/film.svg);
     background-repeat: no-repeat;
-    
+
     animation: spin 8s linear infinite;
 
     @keyframes spin {
@@ -55,7 +61,7 @@ footer {
   display: flex;
   justify-content: center;
   width: 300px;
-  
+
   .search-button {
     margin-left: 6px;
   }
@@ -76,7 +82,7 @@ footer {
   height: 440px;
   margin-top: 1rem;
   transition: box-shadow 0.2s;
-  
+
   &:hover {
     box-shadow: 0px 0px 1rem 0px rgba(0, 0, 0, 0.5);
   }
@@ -105,7 +111,7 @@ footer {
     height: 3rem;
     line-height: 3rem;
   }
-  
+
   .card__fav {
     position: absolute;
     bottom: 1rem;
@@ -118,9 +124,18 @@ footer {
     background-position: 50%;
     outline: none;
     border: none;
-    
+    transition: transform 0.15s;
+
     &.isFav {
       background-image: url(../assets/img/star-gold.svg);
+    }
+
+    &:hover {
+      transform: scale(1.2);
+    }
+
+    &:active {
+      transform: scale(1.1);
     }
   }
 }
