--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -13,6 +13,7 @@ header {
   align-items: center;
 
   h1 {
+    font-weight: bold;
     // background: linear-gradient(to right, #7927b2, #fb3182);
     // -webkit-background-clip: text;
     // -webkit-text-fill-color: transparent;
