--- a/src/css/style.css
+++ b/src/css/style.css
@@ -76,10 +76,15 @@ footer {
   height: 400px;
   margin-top: 1rem;
   transition: box-shadow 0.2s;
+  overflow: hidden;
 }
 
 .card:hover {
   box-shadow: 0px 0px 1rem 0px rgba(0, 0, 0, 0.5);
+}
+
+.card:hover .card__info {
+  transform: translateY(0);
 }
 
 .card .card__title {
@@ -138,6 +143,23 @@ footer {
 
 .card .card__fav:active {
   transform: scale(1.1);
+}
+
+.card .card__info {
+  position: absolute;
+  height: 120px;
+  width: 100%;
+  bottom: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.8);
+  transform: translateY(100%);
+  transition: transform 0.25s;
+}
+
+.card .card__info .card__info-button {
+  display: block;
 }
 
 .swiper-container {
