--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -83,9 +83,14 @@ footer {
   height: 400px;
   margin-top: 1rem;
   transition: box-shadow 0.2s;
+  overflow: hidden;
 
   &:hover {
     box-shadow: 0px 0px 1rem 0px rgba(0, 0, 0, 0.5);
+  }
+  
+  &:hover .card__info {
+    transform: translateY(0);
   }
 
   .card__title {
@@ -143,6 +148,23 @@ footer {
 
     &:active {
       transform: scale(1.1);
+    }
+  }
+  
+  .card__info {
+    position: absolute;
+    height: 120px;
+    width: 100%;
+    bottom: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(255, 255, 255, 0.8);
+    transform: translateY(100%);
+    transition: transform 0.25s;
+    
+    .card__info-button {
+      display: block;
     }
   }
 }
