--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,6 +7,7 @@ body {
 }
 
 header {
+  position: relative;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -39,6 +40,16 @@ header {
       }
     }
   }
+}
+
+.form-switch {
+  position: absolute;
+  left: 1rem;
+  top: 0.5rem;
+}
+
+#nightSwitch {
+  // transform: rotate(90deg);
 }
 
 main {
