--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,8 @@ body {
   height: 100%;
   display: flex;
   flex-direction: column;
+  background: transparent;
+  transition: background 0.25s;
 }
 
 header {
@@ -15,6 +17,7 @@ header {
 
 header h1 {
   font-weight: bold;
+  transition: color 0.25s;
 }
 
 header .film {
@@ -24,6 +27,7 @@ header .film {
   margin-left: 8px;
   background-image: url(../assets/img/film.svg);
   background-repeat: no-repeat;
+  transition: filter 0.25s;
   animation: spin 8s linear infinite;
 }
 
