--- a/src/css/style.css
+++ b/src/css/style.css
@@ -97,6 +97,8 @@ footer {
   margin-top: 1rem;
   transition: box-shadow 0.2s;
   overflow: hidden;
+  opacity: 0;
+  transition: opacity 1s;
 }
 
 .card:hover {
@@ -121,12 +123,19 @@ footer {
   position: relative;
   display: flex;
   justify-content: center;
+  align-items: center;
   width: 228px;
   height: 340px;
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: 50% 0;
   border-radius: 4px;
+}
+
+.card .card__poster.no-image {
+  background-image: url(../assets/img/sad.svg);
+  background-size: 50%;
+  background-position: 50% 40%;
 }
 
 .card .card__rating {
