--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -102,6 +102,8 @@ footer {
   margin-top: 1rem;
   transition: box-shadow 0.2s;
   overflow: hidden;
+  opacity: 0;
+  transition: opacity 1s;
 
   &:hover {
     box-shadow: 0px 0px 1rem 0px rgba(0, 0, 0, 0.5);
@@ -125,12 +127,19 @@ footer {
     position: relative;
     display: flex;
     justify-content: center;
+    align-items: center;
     width: 228px;
     height: 340px;
     background-size: 100%;
     background-repeat: no-repeat;
     background-position: 50% 0;
     border-radius: 4px;
+    
+    &.no-image {
+      background-image: url(../assets/img/sad.svg);
+      background-size: 50%;
+      background-position: 50% 40%;
+    }
   }
 
   .card__rating {
