feat: add search spinner

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,6 +72,10 @@ main {
 
 .search__container .search-button {
   margin-left: 6px;
+  min-width: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .slider {
@@ -123,6 +127,7 @@ main {
   background-repeat: no-repeat;
   background-position: 50% 0;
   border-radius: 4px;
+  transition: background-size 0.25s, background-position 0.25s;
 }
 
 .card .card__poster.no-image {
@@ -133,17 +138,17 @@ main {
 
 .card .card__rating {
   position: absolute;
-  top: .25rem;
-  right: .25rem;
+  top: 6px;
+  left: 6px;
   height: 1.35rem;
 }
 
 .card .card__fav {
   position: absolute;
-  top: 4px;
-  left: 4px;
-  width: 1.25rem;
-  height: 1.25rem;
+  top: 6px;
+  right: 6px;
+  width: 1.35rem;
+  height: 1.35rem;
   background-image: url(../assets/img/star-empty.svg);
   background-color: transparent;
   background-repeat: no-repeat;
