--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -20,6 +20,18 @@ header {
   h1 {
     font-weight: bold;
     transition: color 0.25s;
+    cursor: pointer;
+    
+    a {
+      all: unset;
+      color: unset;
+      transition: all 0.5s;
+      
+      &:hover {
+        all: unset;
+        color: unset; 
+      }
+    }
   }
 
   .film {
@@ -205,6 +217,14 @@ main {
 .swiper-slide {
   display: flex;
   justify-content: center;
+}
+
+#movies {
+
+  .alert {
+    margin: 0 auto;
+    width: fit-content;
+  }
 }
 
 footer {
