--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -296,6 +296,7 @@ footer {
   justify-content: center;
   flex: 0 0 auto;
   padding-bottom: 4px;
+  padding-top: 1rem;
 
   a.rsschool {
     display: block;
