--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -165,7 +165,7 @@ main {
     right: 6px;
     width: 1.35rem;
     height: 1.35rem;
-    background-image: url(../assets/img/star-empty.svg);
+    background-image: url(../assets/img/star-black.svg);
     background-color: transparent;
     background-repeat: no-repeat;
     background-position: 50%;
@@ -176,7 +176,7 @@ main {
     transition: transform 0.15s;
 
     &.isFav {
-      background-image: url(../assets/img/star-gold.svg);
+      background-image: url(../assets/img/star-yellow.svg);
     }
 
     &:hover {
