--- a/src/css/style.css
+++ b/src/css/style.css
@@ -174,6 +174,7 @@ main {
 
 .card .card__fav.isFav {
   background-image: url(../assets/img/star-yellow.svg);
+  filter: drop-shadow(0 0 2px black);
 }
 
 .card .card__fav:hover {
@@ -274,6 +275,35 @@ main {
   position: absolute;
   top: 3px;
   left: -3px;
+}
+
+.top101-row .row__poster .row__fav {
+  position: absolute;
+  bottom: 3px;
+  right: -3px;
+  width: 1.25rem;
+  height: 1.25rem;
+  background-image: url(../assets/img/star-black.svg);
+  background-color: transparent;
+  background-repeat: no-repeat;
+  background-position: 50%;
+  background-size: contain;
+  outline: none;
+  border: none;
+  filter: drop-shadow(0 0 2px white);
+  transition: transform 0.15s;
+}
+
+.top101-row .row__poster .row__fav.isFav {
+  background-image: url(../assets/img/star-yellow.svg);
+}
+
+.top101-row .row__poster .row__fav:hover {
+  transform: scale(1.1);
+}
+
+.top101-row .row__poster .row__fav:active {
+  transform: scale(1.05);
 }
 
 .top101-row .row__title {
