--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -177,6 +177,7 @@ main {
 
     &.isFav {
       background-image: url(../assets/img/star-yellow.svg);
+      filter: drop-shadow(0 0 2px black);
     }
 
     &:hover {
@@ -284,6 +285,35 @@ main {
       position: absolute;
       top: 3px;
       left: -3px;
+    }
+    
+    .row__fav {
+      position: absolute;
+      bottom: 3px;
+      right: -3px;
+      width: 1.25rem;
+      height: 1.25rem;
+      background-image: url(../assets/img/star-black.svg);
+      background-color: transparent;
+      background-repeat: no-repeat;
+      background-position: 50%;
+      background-size: contain;
+      outline: none;
+      border: none;
+      filter: drop-shadow(0 0 2px white);
+      transition: transform 0.15s;
+  
+      &.isFav {
+        background-image: url(../assets/img/star-yellow.svg);
+      }
+  
+      &:hover {
+        transform: scale(1.1);
+      }
+  
+      &:active {
+        transform: scale(1.05);
+      }
     }
   }
 
