--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -156,7 +156,7 @@ main {
     position: absolute;
     top: 6px;
     left: 6px;
-    height: 1.35rem;
+    filter: drop-shadow(0 0 2px black);
   }
 
   .card__fav {
@@ -285,6 +285,7 @@ main {
       position: absolute;
       top: 3px;
       left: -3px;
+      filter: drop-shadow(0 0 2px black);
     }
     
     .row__fav {
@@ -305,6 +306,7 @@ main {
   
       &.isFav {
         background-image: url(../assets/img/star-yellow.svg);
+        filter: drop-shadow(0 0 2px black);
       }
   
       &:hover {
