--- a/src/css/style.css
+++ b/src/css/style.css
@@ -320,8 +320,18 @@ main {
   transform: translateX(0%);
 }
 
+.modal-content.dark {
+  background-color: #4D5154;
+}
+
 .modal-poster {
   max-width: 100%;
+}
+
+.text-plot {
+  padding-top: 0.25rem;
+  color: darkgray;
+  font-size: 0.9rem;
 }
 
 footer {
