--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,10 +7,19 @@
 html,
 body {
   height: 100%;
-  display: flex;
-  flex-direction: column;
   background: transparent;
   transition: background 0.25s;
+}
+
+html {
+  display: block;
+  margin: 0 auto;
+  max-width: 1280px;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
 }
 
 header {
@@ -24,6 +33,10 @@ header {
     font-weight: bold;
     transition: color 0.25s;
     cursor: pointer;
+    
+    @include max_400() {
+      font-size: 30px;
+    }
 
     a {
       all: unset;
@@ -35,51 +48,94 @@ header {
         color: unset;
       }
     }
+    
+    span.film {
+      display: inline-block;
+      width: calc(1.375rem + 0.5vw);
+      height: calc(1.375rem + 0.5vw);
+      margin-left: 8px;
+      background-image: url(../assets/img/film.svg);
+      background-repeat: no-repeat;
+      transition: filter 0.25s;
+      animation: spin 8s linear infinite;
+  
+      @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+  
+        to {
+          transform: rotate(360deg);
+        }
+      }
+  
+      &.invert {
+        filter: invert(1);
+      }
+    } 
   }
 
-  .film {
-    display: inline-block;
-    width: calc(1.375rem + 0.5vw);
-    height: calc(1.375rem + 0.5vw);
-    margin-left: 8px;
-    background-image: url(../assets/img/film.svg);
-    background-repeat: no-repeat;
-    transition: filter 0.25s;
-    animation: spin 8s linear infinite;
-
-    @keyframes spin {
-      from {
-        transform: rotate(0deg);
-      }
-
-      to {
-        transform: rotate(360deg);
-      }
-    }
-
-    &.invert {
-      filter: invert(1);
-    }
-  }
-
-  .form-switch {
+  .nightSwitch-container {
     position: absolute;
-    left: 1rem;
+    left: 3rem;
     top: -100%;
     transition: top 0.25s;
 
     &.visible {
-      top: 0.5rem;
-    }
-
-    input {
-      cursor: pointer;
+      top: 0.25rem;
     }
 
     @include max_400() {
       left: unset;
       right: 1.25rem;
-      top: 0.5rem;
+    }
+    
+    .checkbox {
+      opacity: 0;
+      position: absolute;
+      left: 0rem;
+      top: -100%;
+      transition: top 0.25s;
+    }
+    
+    .label {
+      background-color: #111;
+      border-radius: 50px;
+      border: 1px solid darkgray;
+      
+      cursor: pointer;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 5px;
+      position: relative;
+      height: 28px;
+      width: 52px;
+      transform: scale(0.85);
+    }
+    
+    .label .ball {
+      background-color: #fff;
+      border-radius: 50%;
+      position: absolute;
+      top: 2px;
+      left: 2px;
+      height: 22px;
+      width: 22px;
+      transform: translateX(0px);
+      transition: transform 0.2s linear;
+    }
+    
+    .checkbox:checked + .label .ball {
+      transform: translateX(24px);
+    }
+    
+    .fa-moon {
+      color: #e7cd63;
+    }
+    
+    .fa-sun {
+      color: #f0c025;
     }
   }
 
@@ -91,7 +147,7 @@ header {
     background-image: url(../assets/img/settings.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    top: 2.5rem;
+    top: .35rem;
     transition: transform 0.25s;
     cursor: pointer;
 
@@ -100,11 +156,7 @@ header {
     }
 
     &:active {
-      transform: rotate(90deg) scale(0.9);
-    }
-
-    @include max_400() {
-      top: 0.5rem;
+      transform: rotate(120deg) scale(0.9);
     }
   }
 }
