--- a/src/css/style.css
+++ b/src/css/style.css
@@ -264,7 +264,7 @@ main {
   border: none;
   filter: drop-shadow(0 0 2px white);
   opacity: 0.8;
-  transition: transform 0.15s, opacity 0.15s;
+  transition: transform 0.15s, opacity 0.15s, background 0.15s;
 }
 
 .card .card__fav.isFav {
@@ -401,7 +401,7 @@ main {
   border: none;
   filter: drop-shadow(0 0 3px white);
   opacity: 0.8;
-  transition: transform 0.15s, opacity 0.15s;
+  transition: transform 0.15s, opacity 0.15s, background .15s;
 }
 
 .top101-row .row__poster .row__fav.isFav {
