feat: rating badge click => open movie on imdb

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -469,6 +469,15 @@ main {
   margin-bottom: 1rem;
 }
 
+.badge {
+  cursor: pointer;
+  transition: opacity .15s;
+  
+  &:hover {
+    opacity: 0.8;
+  }
+}
+
 footer {
   display: flex;
   justify-content: center;
