--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -33,7 +33,7 @@ header {
     font-weight: bold;
     transition: color 0.25s;
     cursor: pointer;
-    
+
     @include max_400() {
       font-size: 30px;
     }
@@ -48,7 +48,7 @@ header {
         color: unset;
       }
     }
-    
+
     span.film {
       display: inline-block;
       width: calc(1.375rem + 0.5vw);
@@ -58,28 +58,28 @@ header {
       background-repeat: no-repeat;
       transition: filter 0.25s;
       animation: spin 8s linear infinite;
-  
+
       @keyframes spin {
         from {
           transform: rotate(0deg);
         }
-  
+
         to {
           transform: rotate(360deg);
         }
       }
-  
+
       &.invert {
         filter: invert(1);
       }
-    } 
+    }
   }
 
   .nightSwitch-container {
     position: absolute;
     left: 3rem;
     top: -100%;
-    transition: top 0.25s;
+    transition: top 0.5s;
 
     &.visible {
       top: 0.25rem;
@@ -89,7 +89,7 @@ header {
       left: unset;
       right: 1.25rem;
     }
-    
+
     .checkbox {
       opacity: 0;
       position: absolute;
@@ -97,12 +97,12 @@ header {
       top: -100%;
       transition: top 0.25s;
     }
-    
+
     .label {
-      background-color: #111;
+      background-color: #4D5154;
       border-radius: 50px;
-      border: 1px solid darkgray;
-      
+      border: 1px solid gray;
+
       cursor: pointer;
       display: flex;
       align-items: center;
@@ -113,9 +113,9 @@ header {
       width: 52px;
       transform: scale(0.85);
     }
-    
+
     .label .ball {
-      background-color: #fff;
+      background-color:white;
       border-radius: 50%;
       position: absolute;
       top: 2px;
@@ -125,15 +125,15 @@ header {
       transform: translateX(0px);
       transition: transform 0.2s linear;
     }
-    
-    .checkbox:checked + .label .ball {
+
+    .checkbox:checked+.label .ball {
       transform: translateX(24px);
     }
-    
+
     .fa-moon {
       color: #e7cd63;
     }
-    
+
     .fa-sun {
       color: #f0c025;
     }
@@ -147,17 +147,39 @@ header {
     background-image: url(../assets/img/settings.svg);
     background-size: contain;
     background-repeat: no-repeat;
-    top: .35rem;
-    transition: transform 0.25s;
     cursor: pointer;
+    top: -100%;
+    transition: top 0.5s, transform 0.25s;
+
+    &.visible {
+      transform: rotate(0deg);
+      animation: spin 1.5s ease-out 0.1s 1;
+      top: 0.35rem;
+    }
 
     &:hover {
-      transform: rotate(90deg);
+      transform: rotate(-60deg);
     }
 
     &:active {
-      transform: rotate(120deg) scale(0.9);
+      transform: scale(0.9);
     }
+  }
+
+  @keyframes spin {
+    from {
+      transform: rotate(-360deg);
+    }
+
+    to {
+      transform: rotate(0deg);
+    }
+  }
+}
+
+header.text-light {
+  .label.nightSwitch {
+    background-color: #000;
   }
 }
 
@@ -317,14 +339,16 @@ main {
 }
 
 .bg-dark {
-  .nav-link.active, .card {
+
+  .nav-link.active,
+  .card {
     background-color: rgba(255, 255, 255, 0.95);
   }
-  
+
   .swiper-pagination {
     color: #f8f9fa;
   }
-  
+
   .swiper-pagination-bullet {
     background: #fff;
   }
@@ -472,7 +496,7 @@ main {
 .badge {
   cursor: pointer;
   transition: opacity .15s;
-  
+
   &:hover {
     opacity: 0.8;
   }
