feat: Tab keydown switches tabs feat: add settings small text

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -238,6 +238,7 @@ main {
   text-align: center;
   justify-content: center;
   align-items: center;
+  font-size: 0.9rem;
 }
 
 .card .card__poster {
