--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -245,6 +245,7 @@ main {
     text-align: center;
     justify-content: center;
     align-items: center;
+    font-size: 0.9rem;
   }
 
   .card__poster {
