--- a/src/css/style.css
+++ b/src/css/style.css
@@ -8,7 +8,6 @@ body {
 html {
   display: block;
   margin: 0 auto;
-  max-width: 1280px;
 }
 
 body {
@@ -25,7 +24,9 @@ header {
 }
 
 header h1 {
-  font-weight: bold;
+  margin-top: 6px;
+  font-weight: 500;
+  text-transform: uppercase;
   cursor: pointer;
 }
 
@@ -48,13 +49,14 @@ header h1 a:hover {
 
 header h1 span.film {
   display: inline-block;
+  margin-bottom: -1px;
+  margin-left: 1px;
   width: calc(1.375rem + 0.5vw);
   height: calc(1.375rem + 0.5vw);
-  margin-left: 8px;
   background-image: url(../assets/img/film.svg);
   background-repeat: no-repeat;
   transition: filter 0.25s;
-  animation: spin 8s linear infinite;
+  animation: spin 10s linear infinite;
 }
 
 @keyframes spin {
@@ -484,18 +486,31 @@ main {
 }
 
 footer {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  height: 120px;
   flex: 0 0 auto;
-  padding-bottom: 4px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 10px;
   padding-top: 1rem;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+
+footer a {
+  color: inherit;
+}
+
+footer a:hover {
+  color: inherit;
 }
 
 footer a.rsschool {
   display: block;
   margin-right: 5px;
-  width: 64px;
-  height: 24px;
+  width: 96px;
+  height: 36px;
   background-image: url(../assets/img/rs_school.svg);
   background-repeat: no-repeat;
   background-size: contain;
@@ -506,6 +521,6 @@ footer a.rsschool:hover {
   opacity: 0.7;
 }
 
-footer a.rsschool.invert {
+footer.text-muted a.rsschool {
   filter: invert(1);
 }
