--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,7 +14,7 @@ body {
 html {
   display: block;
   margin: 0 auto;
-  max-width: 1280px;
+  // max-width: 1280px;
 }
 
 body {
@@ -30,7 +30,10 @@ header {
   align-items: center;
 
   h1 {
-    font-weight: bold;
+    margin-top: 6px;
+    font-weight: 500;
+    text-transform: uppercase;
+    
     cursor: pointer;
 
     @include max_400() {
@@ -50,13 +53,14 @@ header {
 
     span.film {
       display: inline-block;
+      margin-bottom: -1px;
+      margin-left: 1px;
       width: calc(1.375rem + 0.5vw);
       height: calc(1.375rem + 0.5vw);
-      margin-left: 8px;
       background-image: url(../assets/img/film.svg);
       background-repeat: no-repeat;
       transition: filter 0.25s;
-      animation: spin 8s linear infinite;
+      animation: spin 10s linear infinite;
 
       @keyframes spin {
         from {
@@ -503,28 +507,41 @@ main {
 }
 
 footer {
+  width: 100%;
   display: flex;
-  justify-content: center;
+  height: 120px;
   flex: 0 0 auto;
-  padding-bottom: 4px;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 10px;
   padding-top: 1rem;
+  background-color: rgba(0, 0, 0, 0.3);
+  
+  a {
+    color: inherit;
+    
+    &:hover {
+      color: inherit;
+    }
+  }
 
   a.rsschool {
     display: block;
     margin-right: 5px;
-    width: 64px;
-    height: 24px;
+    width: 96px;
+    height: 36px;
     background-image: url(../assets/img/rs_school.svg);
     background-repeat: no-repeat;
     background-size: contain;
     opacity: 0.55;
-
+    
     &:hover {
       opacity: 0.7;
     }
-
-    &.invert {
-      filter: invert(1);
-    }
+  }
+  
+  &.text-muted a.rsschool {
+    filter: invert(1);
   }
 }
