--- a/src/css/style.css
+++ b/src/css/style.css
@@ -181,6 +181,10 @@ header.text-light .settings-button {
   filter: invert(1);
 }
 
+header.text-light .nav-link.active {
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
 main {
   display: flex;
   flex-direction: column;
