--- a/src/css/style.css
+++ b/src/css/style.css
@@ -24,9 +24,13 @@ header {
 }
 
 header h1 {
-  margin-top: 6px;
+  width: 100%;
+  margin: 0;
+  padding: 8px 0 12px 0;
   font-weight: 500;
   text-transform: uppercase;
+  text-align: center;
+  background: rgba(0, 0, 0, 0.1);
   cursor: pointer;
 }
 
@@ -173,16 +177,30 @@ header .settings-button:active {
   }
 }
 
-header.text-light .label.themeSwitch {
-  background-color: #000;
-}
-
 header.text-light .settings-button {
   filter: invert(1);
 }
 
+header.text-light .label.themeSwitch {
+  background-color: #000;
+}
+
 header.text-light .nav-link.active {
-  background-color: rgba(255, 255, 255, 0.75);
+  background-color: #212529;
+  border-color: transparent;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+header.text-light h1 {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+header.text-light #nav {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.nav-tabs {
+  border-color: transparent;
 }
 
 main {
@@ -336,7 +354,6 @@ main {
   width: 100% !important;
 }
 
-.bg-dark .nav-link.active,
 .bg-dark .card {
   background-color: rgba(255, 255, 255, 0.95);
 }
@@ -347,6 +364,13 @@ main {
 
 .bg-dark .swiper-pagination-bullet {
   background: #fff;
+}
+
+#nav {
+  width: 100%;
+  margin: 0;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.1);
 }
 
 #movies .alert {
@@ -492,14 +516,14 @@ main {
 footer {
   width: 100%;
   display: flex;
-  height: 120px;
+  height: 90px;
   flex: 0 0 auto;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding-bottom: 10px;
-  padding-top: 1rem;
-  background-color: rgba(0, 0, 0, 0.15);
+  padding-bottom: 2px;
+  padding-top: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 footer a {
@@ -523,6 +547,10 @@ footer a.rsschool {
 
 footer a.rsschool:hover {
   opacity: 0.7;
+}
+
+footer.text-muted {
+  background-color: rgba(0, 0, 0, 0.4);
 }
 
 footer.text-muted a.rsschool {
