--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,3 +1,5 @@
+$dark-bg: rgba(0, 0, 0, 0.4);
+
 @mixin max_400 {
   @media (max-width: 400px) {
     @content;
@@ -29,10 +31,13 @@ header {
   align-items: center;
 
   h1 {
-    margin-top: 6px;
+    width: 100%;
+    margin: 0;
+    padding: 8px 0 12px 0;
     font-weight: 500;
     text-transform: uppercase;
-    
+    text-align: center;
+    background: rgba(0, 0, 0, 0.1);
     cursor: pointer;
 
     @include max_400() {
@@ -117,7 +122,7 @@ header {
     }
 
     .label .ball {
-      background-color:white;
+      background-color: white;
       border-radius: 50%;
       position: absolute;
       top: 2px;
@@ -180,17 +185,31 @@ header {
 }
 
 header.text-light {
+  .settings-button {
+    filter: invert(1);
+  }
+
   .label.themeSwitch {
     background-color: #000;
   }
+
+  .nav-link.active {
+    background-color: #212529;
+    border-color: transparent;
+    color: rgba(255, 255, 255, 0.6)
+  }
+
+  h1 {
+    background: $dark-bg;
+  }
+
+  #nav {
+    background: $dark-bg;
+  }
 }
 
-header.text-light .settings-button {
-  filter: invert(1);
-}
-
-header.text-light .nav-link.active {
-  background-color: rgba(255, 255, 255, 0.75);
+.nav-tabs {
+  border-color: transparent;
 }
 
 main {
@@ -347,7 +366,6 @@ main {
 
 .bg-dark {
 
-  .nav-link.active,
   .card {
     background-color: rgba(255, 255, 255, 0.95);
   }
@@ -359,6 +377,13 @@ main {
   .swiper-pagination-bullet {
     background: #fff;
   }
+}
+
+#nav {
+  width: 100%;
+  margin: 0;
+  justify-content: center;
+  background: rgba(0, 0, 0, 0.1);
 }
 
 #movies {
@@ -512,18 +537,18 @@ main {
 footer {
   width: 100%;
   display: flex;
-  height: 120px;
+  height: 90px;
   flex: 0 0 auto;
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  padding-bottom: 10px;
-  padding-top: 1rem;
-  background-color: rgba(0, 0, 0, 0.15);
-  
+  padding-bottom: 2px;
+  padding-top: 0.5rem;
+  background-color: rgba(0, 0, 0, 0.1);
+
   a {
     color: inherit;
-    
+
     &:hover {
       color: inherit;
     }
@@ -538,13 +563,17 @@ footer {
     background-repeat: no-repeat;
     background-size: contain;
     opacity: 0.55;
-    
+
     &:hover {
       opacity: 0.7;
     }
   }
-  
-  &.text-muted a.rsschool {
-    filter: invert(1);
+
+  &.text-muted {
+    background-color: $dark-bg;
+
+    a.rsschool {
+      filter: invert(1);
+    }
   }
 }
