--- a/src/css/style.css
+++ b/src/css/style.css
@@ -561,3 +561,253 @@ footer.text-muted {
 footer.text-muted a.rsschool {
   filter: invert(1);
 }
+
+.glitch {
+  position: relative;
+  color: inherit;
+  animation: glitch-skew 1s infinite linear alternate-reverse;
+}
+
+.glitch::before {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  left: 2px;
+  text-shadow: -2px 0 #ff00c1;
+  /* Creates an initial clip for our glitch. This works in
+  a typical top,right,bottom,left fashion and creates a mask
+  to only show a certain part of the glitch at a time. */
+  clip: rect(44px, 450px, 56px, 0);
+  /* Runs our glitch-anim defined below to run in a 5s loop, infinitely,
+  with an alternating animation to keep things fresh. */
+  animation: glitch-anim 5s infinite linear alternate-reverse;
+}
+
+.glitch::after {
+  content: attr(data-text);
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  left: -2px;
+  text-shadow: -2px 0 #00fff9, 2px 2px #ff00c1;
+  animation: glitch-anim2 1s infinite linear alternate-reverse;
+}
+
+/* Creates an animation with 20 steps. For each step, it calculates 
+a percentage for the specific step. It then generates a random clip
+box to be used for the random glitch effect. Also adds a very subtle
+skew to change the 'thickness' of the glitch.*/
+@keyframes glitch-anim {
+  0% {
+    clip: rect(84px, 9999px, 37px, 0);
+    transform: skew(0.33deg);
+  }
+  5% {
+    clip: rect(25px, 9999px, 35px, 0);
+    transform: skew(0.72deg);
+  }
+  10% {
+    clip: rect(36px, 9999px, 15px, 0);
+    transform: skew(0.75deg);
+  }
+  15% {
+    clip: rect(10px, 9999px, 21px, 0);
+    transform: skew(0.96deg);
+  }
+  20% {
+    clip: rect(34px, 9999px, 73px, 0);
+    transform: skew(0.72deg);
+  }
+  25% {
+    clip: rect(91px, 9999px, 91px, 0);
+    transform: skew(0.61deg);
+  }
+  30% {
+    clip: rect(85px, 9999px, 69px, 0);
+    transform: skew(0.57deg);
+  }
+  35% {
+    clip: rect(81px, 9999px, 67px, 0);
+    transform: skew(0.92deg);
+  }
+  40% {
+    clip: rect(68px, 9999px, 93px, 0);
+    transform: skew(0.2deg);
+  }
+  45% {
+    clip: rect(46px, 9999px, 73px, 0);
+    transform: skew(0.55deg);
+  }
+  50% {
+    clip: rect(94px, 9999px, 42px, 0);
+    transform: skew(0.55deg);
+  }
+  55% {
+    clip: rect(36px, 9999px, 64px, 0);
+    transform: skew(0.84deg);
+  }
+  60% {
+    clip: rect(13px, 9999px, 42px, 0);
+    transform: skew(0.17deg);
+  }
+  65% {
+    clip: rect(42px, 9999px, 53px, 0);
+    transform: skew(0.45deg);
+  }
+  70% {
+    clip: rect(23px, 9999px, 98px, 0);
+    transform: skew(0.74deg);
+  }
+  75% {
+    clip: rect(97px, 9999px, 24px, 0);
+    transform: skew(0.76deg);
+  }
+  80% {
+    clip: rect(91px, 9999px, 44px, 0);
+    transform: skew(0.25deg);
+  }
+  85% {
+    clip: rect(25px, 9999px, 39px, 0);
+    transform: skew(0.21deg);
+  }
+  90% {
+    clip: rect(58px, 9999px, 99px, 0);
+    transform: skew(0.66deg);
+  }
+  95% {
+    clip: rect(11px, 9999px, 12px, 0);
+    transform: skew(0.55deg);
+  }
+  100% {
+    clip: rect(27px, 9999px, 73px, 0);
+    transform: skew(0.32deg);
+  }
+}
+
+@keyframes glitch-anim2 {
+  0% {
+    clip: rect(1px, 9999px, 60px, 0);
+    transform: skew(0.09deg);
+  }
+  5% {
+    clip: rect(85px, 9999px, 69px, 0);
+    transform: skew(0.47deg);
+  }
+  10% {
+    clip: rect(38px, 9999px, 59px, 0);
+    transform: skew(0.45deg);
+  }
+  15% {
+    clip: rect(76px, 9999px, 32px, 0);
+    transform: skew(0.76deg);
+  }
+  20% {
+    clip: rect(38px, 9999px, 80px, 0);
+    transform: skew(0.88deg);
+  }
+  25% {
+    clip: rect(9px, 9999px, 6px, 0);
+    transform: skew(0.42deg);
+  }
+  30% {
+    clip: rect(5px, 9999px, 60px, 0);
+    transform: skew(0.25deg);
+  }
+  35% {
+    clip: rect(13px, 9999px, 49px, 0);
+    transform: skew(0.01deg);
+  }
+  40% {
+    clip: rect(54px, 9999px, 60px, 0);
+    transform: skew(0.37deg);
+  }
+  45% {
+    clip: rect(80px, 9999px, 86px, 0);
+    transform: skew(0.3deg);
+  }
+  50% {
+    clip: rect(36px, 9999px, 31px, 0);
+    transform: skew(0.8deg);
+  }
+  55% {
+    clip: rect(6px, 9999px, 71px, 0);
+    transform: skew(0.7deg);
+  }
+  60% {
+    clip: rect(73px, 9999px, 51px, 0);
+    transform: skew(0.03deg);
+  }
+  65% {
+    clip: rect(24px, 9999px, 84px, 0);
+    transform: skew(0.3deg);
+  }
+  70% {
+    clip: rect(51px, 9999px, 15px, 0);
+    transform: skew(0.43deg);
+  }
+  75% {
+    clip: rect(30px, 9999px, 92px, 0);
+    transform: skew(0.52deg);
+  }
+  80% {
+    clip: rect(1px, 9999px, 1px, 0);
+    transform: skew(0.56deg);
+  }
+  85% {
+    clip: rect(8px, 9999px, 80px, 0);
+    transform: skew(0.25deg);
+  }
+  90% {
+    clip: rect(69px, 9999px, 69px, 0);
+    transform: skew(0.46deg);
+  }
+  95% {
+    clip: rect(80px, 9999px, 69px, 0);
+    transform: skew(0.52deg);
+  }
+  100% {
+    clip: rect(40px, 9999px, 21px, 0);
+    transform: skew(0.64deg);
+  }
+}
+
+@keyframes glitch-skew {
+  0% {
+    transform: skew(4deg);
+  }
+  10% {
+    transform: skew(-2deg);
+  }
+  20% {
+    transform: skew(4deg);
+  }
+  30% {
+    transform: skew(4deg);
+  }
+  40% {
+    transform: skew(3deg);
+  }
+  50% {
+    transform: skew(5deg);
+  }
+  60% {
+    transform: skew(1deg);
+  }
+  70% {
+    transform: skew(-4deg);
+  }
+  80% {
+    transform: skew(1deg);
+  }
+  90% {
+    transform: skew(-2deg);
+  }
+  100% {
+    transform: skew(5deg);
+  }
+}
