--- a/src/css/style.css
+++ b/src/css/style.css
@@ -211,11 +211,28 @@ main {
 }
 
 .search__container {
+  position: relative;
   margin: 0 auto;
   padding: 1rem;
   display: flex;
   justify-content: center;
-  width: 300px;
+  min-width: 320px;
+  max-width: 500px;
+  width: 50%;
+}
+
+.search__container .fa-keyboard {
+  position: absolute;
+  left: -1rem;
+  font-size: 1.5rem;
+  line-height: 1.5;
+  opacity: 0.5;
+  cursor: pointer;
+  transition: opacity 0.25s, transform 0.5s;
+}
+
+.search__container .fa-keyboard.active {
+  opacity: 1;
 }
 
 .search__container .search-button {
@@ -604,175 +621,175 @@ box to be used for the random glitch effect. Also adds a very subtle
 skew to change the 'thickness' of the glitch.*/
 @keyframes glitch-anim {
   0% {
-    clip: rect(41px, 9999px, 74px, 0);
-    transform: skew(0.48deg);
+    clip: rect(57px, 9999px, 3px, 0);
+    transform: skew(0.6deg);
   }
   5% {
-    clip: rect(14px, 9999px, 95px, 0);
-    transform: skew(0.18deg);
+    clip: rect(89px, 9999px, 82px, 0);
+    transform: skew(0.43deg);
   }
   10% {
-    clip: rect(66px, 9999px, 57px, 0);
-    transform: skew(0.22deg);
+    clip: rect(91px, 9999px, 11px, 0);
+    transform: skew(0.03deg);
   }
   15% {
-    clip: rect(68px, 9999px, 20px, 0);
-    transform: skew(0.12deg);
+    clip: rect(83px, 9999px, 15px, 0);
+    transform: skew(0.09deg);
   }
   20% {
-    clip: rect(28px, 9999px, 37px, 0);
-    transform: skew(0.34deg);
+    clip: rect(75px, 9999px, 62px, 0);
+    transform: skew(0.98deg);
   }
   25% {
-    clip: rect(93px, 9999px, 43px, 0);
-    transform: skew(0.94deg);
+    clip: rect(43px, 9999px, 59px, 0);
+    transform: skew(0.38deg);
   }
   30% {
-    clip: rect(83px, 9999px, 62px, 0);
-    transform: skew(0.58deg);
+    clip: rect(41px, 9999px, 18px, 0);
+    transform: skew(0.78deg);
   }
   35% {
-    clip: rect(71px, 9999px, 85px, 0);
-    transform: skew(0.75deg);
-  }
-  40% {
-    clip: rect(83px, 9999px, 76px, 0);
+    clip: rect(31px, 9999px, 90px, 0);
     transform: skew(0.33deg);
   }
+  40% {
+    clip: rect(37px, 9999px, 38px, 0);
+    transform: skew(0.61deg);
+  }
   45% {
-    clip: rect(32px, 9999px, 40px, 0);
-    transform: skew(0.7deg);
+    clip: rect(18px, 9999px, 57px, 0);
+    transform: skew(0.36deg);
   }
   50% {
-    clip: rect(57px, 9999px, 68px, 0);
-    transform: skew(0.19deg);
+    clip: rect(51px, 9999px, 54px, 0);
+    transform: skew(0.87deg);
   }
   55% {
-    clip: rect(36px, 9999px, 80px, 0);
-    transform: skew(0.34deg);
+    clip: rect(87px, 9999px, 49px, 0);
+    transform: skew(0.42deg);
   }
   60% {
-    clip: rect(52px, 9999px, 77px, 0);
-    transform: skew(0.48deg);
+    clip: rect(23px, 9999px, 9px, 0);
+    transform: skew(0.84deg);
   }
   65% {
-    clip: rect(69px, 9999px, 76px, 0);
-    transform: skew(0.59deg);
+    clip: rect(52px, 9999px, 43px, 0);
+    transform: skew(0.16deg);
   }
   70% {
-    clip: rect(23px, 9999px, 74px, 0);
-    transform: skew(0.34deg);
+    clip: rect(49px, 9999px, 100px, 0);
+    transform: skew(0.21deg);
   }
   75% {
-    clip: rect(22px, 9999px, 33px, 0);
-    transform: skew(0.56deg);
+    clip: rect(6px, 9999px, 25px, 0);
+    transform: skew(0.37deg);
   }
   80% {
-    clip: rect(4px, 9999px, 30px, 0);
-    transform: skew(0.25deg);
+    clip: rect(76px, 9999px, 86px, 0);
+    transform: skew(0.57deg);
   }
   85% {
-    clip: rect(66px, 9999px, 48px, 0);
-    transform: skew(0.91deg);
+    clip: rect(5px, 9999px, 69px, 0);
+    transform: skew(0.62deg);
   }
   90% {
-    clip: rect(18px, 9999px, 20px, 0);
-    transform: skew(0.3deg);
+    clip: rect(1px, 9999px, 13px, 0);
+    transform: skew(0.11deg);
   }
   95% {
-    clip: rect(2px, 9999px, 1px, 0);
-    transform: skew(0.69deg);
+    clip: rect(70px, 9999px, 67px, 0);
+    transform: skew(0.06deg);
   }
   100% {
-    clip: rect(15px, 9999px, 68px, 0);
-    transform: skew(0.61deg);
+    clip: rect(73px, 9999px, 84px, 0);
+    transform: skew(0.22deg);
   }
 }
 
 @keyframes glitch-anim2 {
   0% {
-    clip: rect(32px, 9999px, 27px, 0);
-    transform: skew(0.24deg);
+    clip: rect(51px, 9999px, 90px, 0);
+    transform: skew(0.78deg);
   }
   5% {
-    clip: rect(53px, 9999px, 25px, 0);
-    transform: skew(0.69deg);
+    clip: rect(72px, 9999px, 60px, 0);
+    transform: skew(0.79deg);
   }
   10% {
-    clip: rect(56px, 9999px, 45px, 0);
-    transform: skew(0.21deg);
+    clip: rect(34px, 9999px, 52px, 0);
+    transform: skew(0.92deg);
   }
   15% {
-    clip: rect(20px, 9999px, 61px, 0);
-    transform: skew(0.03deg);
+    clip: rect(67px, 9999px, 13px, 0);
+    transform: skew(0.06deg);
   }
   20% {
-    clip: rect(61px, 9999px, 21px, 0);
-    transform: skew(0.46deg);
+    clip: rect(96px, 9999px, 5px, 0);
+    transform: skew(0.92deg);
   }
   25% {
-    clip: rect(47px, 9999px, 39px, 0);
-    transform: skew(0.76deg);
-  }
-  30% {
-    clip: rect(59px, 9999px, 68px, 0);
-    transform: skew(0.15deg);
-  }
-  35% {
-    clip: rect(26px, 9999px, 54px, 0);
-    transform: skew(0.21deg);
-  }
-  40% {
-    clip: rect(81px, 9999px, 28px, 0);
-    transform: skew(0.26deg);
-  }
-  45% {
-    clip: rect(53px, 9999px, 15px, 0);
-    transform: skew(0.35deg);
-  }
-  50% {
-    clip: rect(36px, 9999px, 10px, 0);
-    transform: skew(0.51deg);
-  }
-  55% {
-    clip: rect(23px, 9999px, 27px, 0);
+    clip: rect(77px, 9999px, 37px, 0);
     transform: skew(0.82deg);
   }
-  60% {
-    clip: rect(32px, 9999px, 27px, 0);
-    transform: skew(0.87deg);
+  30% {
+    clip: rect(18px, 9999px, 42px, 0);
+    transform: skew(0.99deg);
   }
-  65% {
-    clip: rect(44px, 9999px, 75px, 0);
-    transform: skew(0.73deg);
+  35% {
+    clip: rect(14px, 9999px, 2px, 0);
+    transform: skew(0.85deg);
   }
-  70% {
-    clip: rect(38px, 9999px, 63px, 0);
-    transform: skew(0.41deg);
+  40% {
+    clip: rect(57px, 9999px, 7px, 0);
+    transform: skew(0.11deg);
   }
-  75% {
-    clip: rect(91px, 9999px, 6px, 0);
-    transform: skew(0.24deg);
+  45% {
+    clip: rect(45px, 9999px, 2px, 0);
+    transform: skew(0.27deg);
   }
-  80% {
-    clip: rect(87px, 9999px, 17px, 0);
+  50% {
+    clip: rect(65px, 9999px, 71px, 0);
+    transform: skew(0.05deg);
+  }
+  55% {
+    clip: rect(93px, 9999px, 18px, 0);
     transform: skew(0.59deg);
   }
+  60% {
+    clip: rect(99px, 9999px, 11px, 0);
+    transform: skew(0.3deg);
+  }
+  65% {
+    clip: rect(5px, 9999px, 20px, 0);
+    transform: skew(0.51deg);
+  }
+  70% {
+    clip: rect(17px, 9999px, 47px, 0);
+    transform: skew(0.11deg);
+  }
+  75% {
+    clip: rect(45px, 9999px, 57px, 0);
+    transform: skew(0.78deg);
+  }
+  80% {
+    clip: rect(93px, 9999px, 59px, 0);
+    transform: skew(0.16deg);
+  }
   85% {
-    clip: rect(72px, 9999px, 74px, 0);
-    transform: skew(0.9deg);
+    clip: rect(43px, 9999px, 57px, 0);
+    transform: skew(0.49deg);
   }
   90% {
-    clip: rect(37px, 9999px, 87px, 0);
-    transform: skew(0.94deg);
+    clip: rect(15px, 9999px, 8px, 0);
+    transform: skew(0.42deg);
   }
   95% {
-    clip: rect(40px, 9999px, 96px, 0);
-    transform: skew(0.4deg);
+    clip: rect(69px, 9999px, 28px, 0);
+    transform: skew(0.13deg);
   }
   100% {
-    clip: rect(94px, 9999px, 33px, 0);
-    transform: skew(0.87deg);
+    clip: rect(1px, 9999px, 69px, 0);
+    transform: skew(0.82deg);
   }
 }
 
@@ -781,33 +798,33 @@ skew to change the 'thickness' of the glitch.*/
     transform: skew(5deg);
   }
   10% {
-    transform: skew(3deg);
-  }
-  20% {
-    transform: skew(-3deg);
-  }
-  30% {
     transform: skew(-4deg);
   }
-  40% {
+  20% {
+    transform: skew(5deg);
+  }
+  30% {
     transform: skew(0deg);
+  }
+  40% {
+    transform: skew(5deg);
   }
   50% {
-    transform: skew(3deg);
+    transform: skew(-3deg);
   }
   60% {
-    transform: skew(0deg);
+    transform: skew(5deg);
   }
   70% {
     transform: skew(-4deg);
   }
   80% {
-    transform: skew(3deg);
+    transform: skew(4deg);
   }
   90% {
     transform: skew(-3deg);
   }
   100% {
-    transform: skew(5deg);
+    transform: skew(-1deg);
   }
 }
