refactor: move some funcs from index to modules

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -242,6 +242,10 @@ main {
     &.active {
       opacity: 1;
     }
+    
+    @include max_400() {
+      visibility: hidden;
+    }
   }
 
   .search-button {
